--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 praesentium.
               </p>
               <a
-                href="./project-1.html"
+                href="https://www.behance.net/gallery/145262409/Slife-Furniture-Shopping-App"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >EXPLORE</a
