--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             </p>
           </blockquote>
           <h3>Vo Hong Son</h3>
-          <h4>UI/UX Design - 2 Years Experience</h4>
+          <h4>UI/UX Designer - 2 Years' Experience</h4>
         </figcaption>
       </figure>
       <figure class="snip1533">
@@ -375,7 +375,7 @@
             </p>
           </blockquote>
           <h3>Nguyen Quang Nhat</h3>
-          <h4>Graphic Designer - 1 Year Experience</h4>
+          <h4>Graphic Designer - 1 Years' Experience</h4>
         </figcaption>
       
   </section>
